--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -12,3 +12,22 @@
 <%= link_to 'Edit', edit_question_path(@question), class: 'btn btn-secondary' %>
 <%= link_to 'Destroy', question_path(@question), class: 'btn btn-danger',
   data: {method: :delete, confirm: 'Are you sure?'} %>
+
+<hr class="my-4" />
+
+<h2 class="mb-3">Write your answer</h2>
+
+<%= form_with model: [@question, @answer] do |f| %>
+  <div class="mb-3 row">
+    <div class="col-sm-2 col-form-label">
+      <%= f.label :body %>
+    </div>
+
+    <div class="col-sm-10">
+      <%= f.text_area :body, class: 'form-control' %>
+    </div>
+  </div>
+
+  <%= f.submit "Submit answer!", class: 'btn btn-primary' %>
+<% end %>
+
