--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,3 +1,6 @@
+<% currently_at 'Questions' %>
+<% provide :page_title, 'Question' %>
+
 <h1 class="mb-4"><%= @question.title %></h1>
 
 <time datetime="<%= @question.formatted_created_at %>">
@@ -9,27 +12,33 @@
 </p>
 
 <%= link_to 'Show', question_path(@question), class: 'btn btn-primary' %> 
-<%= link_to 'Edit', edit_question_path(@question), class: 'btn btn-secondary' %>
+<%= link_to 'Edit', edit_question_path(@question), class: 'btn btn-info' %>
 <%= link_to 'Destroy', question_path(@question), class: 'btn btn-danger',
   data: {method: :delete, confirm: 'Are you sure?'} %>
 
 <hr class="my-4" />
-
 <h2 class="mb-3">Write your answer</h2>
 
-<%= render "layouts/shared/errors", object: @answer %>
+<%= render "answers/form" %>
 
-<%= form_with model: [@question, @answer] do |f| %>
-  <div class="mb-3 row">
-    <div class="col-sm-2 col-form-label">
-      <%= f.label :body %>
-    </div>
+<hr class="my-4" />
+<h2 class="mb-3">Answers</h2>
 
-    <div class="col-sm-10">
-      <%= f.text_area :body, class: 'form-control' %>
-    </div>
-  </div>
-
-  <%= f.submit "Submit answer!", class: 'btn btn-primary' %>
+<% @answers.each do |answer|  %>
+  <article class="mb-3 card">
+    <div class="card-body">
+      <p class="card-text">
+        <%= answer.body %>
+      </p>
+      <div class="">
+        <%= link_to 'Edit', edit_question_answer_path(@question, answer), class: 'btn btn-info btn-sm' %>
+        <%= link_to 'Delete', question_answer_path(@question, answer), class: 'btn btn-danger btn-sm',
+        data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %></div>
+      </div>
+      <div class="card-footer text-body-secondary">
+        <small>
+          Created <%= time_ago_in_words(answer.created_at) %> ago
+        </small>
+      </div>
+  </article>
 <% end %>
-
