--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,3 +1,6 @@
+<% currently_at 'Questions' %>
+<% provide :page_title, 'New question' %>
+
 <h1 class="mb-4">New question</h1>
 
 <%= render 'form' %>
