--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -23,20 +23,4 @@
 <hr class="my-4" />
 <h2 class="mb-3">Answers</h2>
 
-<% @answers.each do |answer|  %>
-  <article class="mb-3 card" id="answer-<%= answer.id %>">
-    <div class="card-body">
-      <p class="card-text">
-        <%= answer.body %>
-      </p>
-      <div class="">
-        <%= link_to 'Edit', edit_question_answer_path(@question, answer), class: 'btn btn-info btn-sm' %>
-        <%= link_to 'Delete', question_answer_path(@question, answer), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'btn btn-danger btn-sm' %></div>
-      </div>
-      <div class="card-footer text-body-secondary">
-        <small>
-          Created <%= time_ago_in_words(answer.created_at) %> ago
-        </small>
-      </div>
-  </article>
-<% end %>
+<%= render @answers %>
