--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -1,8 +1,8 @@
 <article class="mb-3 card" id="answer-<%= answer.id %>">
     <div class="card-body">
-      <p class="card-text">
-        <%= answer.body %>
-      </p>
+      <div class="card-text">
+        <%= sanitize answer.body %>
+      </div>
       <div class="">
         <%= link_to 'Edit', edit_question_answer_path(question, answer), class: 'btn btn-info btn-sm' %>
         <%= link_to 'Delete', question_answer_path(question, answer), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'btn btn-danger btn-sm' %></div>
