feat: amm mb-4 to card text

--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -1,6 +1,6 @@
 <article class="mb-3 card" id="answer-<%= answer.id %>">
     <div class="card-body">
-      <div class="card-text">
+      <div class="card-text mb-4">
         <%= sanitize answer.body %>
       </div>
       <div class="">
