feat: add mb-4 to card text

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -9,7 +9,7 @@
     <div class="card-body">
       <h4><%= question.title %></h2>
 
-      <section class="card-text">
+      <section class="card-text mb-4">
         <time datetime="<%= question.formatted_created_at %>">
           <small><%= question.formatted_created_at %></small>
         </time>
