--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -7,7 +7,7 @@
   <%= @question.formatted_created_at %>
 </time>
 
-<div class="lead my-3">
+<div class="lead my-3 mb-4">
   <%= sanitize @question.body %>
 </div>
 
