--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -15,7 +15,7 @@
         </time>
 
         <div class="my-2">
-          <%= strip_tags question.body %>
+          <%= truncate strip_tags(question.body), length: 140, omission: '... (continued)' %>
         </div>
       </section>
 
