--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -4,6 +4,9 @@
 <h1 class="mb-4">Questions</h1>
 
 <%= link_to 'New question', new_question_path, class: 'btn btn-primary btn-lg' %>
+
+<%= paginate @questions %>
+
 <% @questions.each do |question| %>
   <article class="card mt-3">
     <div class="card-body">
@@ -25,3 +28,5 @@
     </div>
   </article>
 <% end %>
+
+<%= paginate @questions %>
