--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -11,7 +11,6 @@
   <%= sanitize @question.body %>
 </div>
 
-<%= link_to 'Show', question_path(@question), class: 'btn btn-primary' %> 
 <%= link_to 'Edit', edit_question_path(@question), class: 'btn btn-info' %>
 <%= link_to 'Destroy', question_path(@question), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'btn btn-danger' %>
 
@@ -24,8 +23,8 @@
 <h2 class="mb-3">Answers</h2>
 
 
-<%= paginate @answers %>
+<%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
 
 <%= render(partial: "answers/answer", collection: @answers, as: :answer, locals: {question: @question}) || "There are no answers" %>
 
-<%= paginate @answers %>
+<%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
