feat: create new user forom with form partial

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,6 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<% currently_at 'Registration' %>
+<% provide :page_title, 'Sign up' %>
+
+<h1 class="mb-4">Registration</h1>
+
+<%= render 'form' %>
