--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<% currently_at 'Registration' %>
-<% provide :page_title, 'Sign up' %>
+<% provide :page_title, 'Registration' %>
+<% currently_at 'Sign up' %>
 
 <h1 class="mb-4">Registration</h1>
 
