feat: add Log In nav item

--- a/app/views/layouts/shared/_menu.html.erb
+++ b/app/views/layouts/shared/_menu.html.erb
@@ -21,6 +21,9 @@
               <li>
                 <%= nav_tab( 'Sign up', new_user_path, {class: 'nav-link px-2', current_page: current_page} )%>
               </li>
+              <li>
+                <%= nav_tab( 'Log In', new_session_path, {class: 'nav-link px-2', current_page: current_page} )%>
+              </li>
           <% end %>  
         </ul>
       </nav>
