--- a/app/views/layouts/shared/_menu.html.erb
+++ b/app/views/layouts/shared/_menu.html.erb
@@ -19,6 +19,12 @@
               
               <ul class="dropdown-menu">
                 <li>
+                  <%= link_to 'Edit profile', edit_user_path(current_user), class: 'dropdown-item' %>
+                </li>
+                <li>
+                  <hr class="dropdown-divider" />
+                </li>
+                <li>
                   <%= link_to 'Log Out', session_path, data: {turbo_method: :delete}, class: 'dropdown-item' %>
                 </li>
               </ul>
