--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -27,6 +27,12 @@
       <%= link_to 'Edit', edit_question_path(question), class: 'btn btn-secondary' %>
       <%= link_to 'Destroy', question_path(question), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'btn btn-danger' %>
     </div>
+    <div class="card-footer text-body-secondary">
+        <small>
+          Created <%= time_ago_in_words(question.created_at) %> ago,
+          edited <%= time_ago_in_words(question.updated_at) %> ago
+        </small>
+      </div>
   </article>
 <% end %>
 
