--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-<% currently_at 'Home' %>
+<% currently_at t('menu.home') %>
 <% provide :page_title %>
 
-<h1>Welcome to AskIt!</h1>
+<h1><%= t('.title') %></h1>
