--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -10,14 +10,9 @@
 
 <% @questions.each do |question| %>
   <article class="card my-3">
+    <h4 class="card-header"><%= question.title %></h2>
     <div class="card-body">
-      <h4><%= question.title %></h2>
-
       <section class="card-text mb-4">
-        <time datetime="<%= question.formatted_created_at %>">
-          <small><%= question.formatted_created_at %></small>
-        </time>
-
         <div class="my-2">
           <%= truncate strip_tags(question.body), length: 140, omission: '... (continued)' %>
         </div>
