--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -4,13 +4,14 @@
         <%= sanitize answer.body %>
       </div>
       <div class="">
-        <%= link_to 'Edit', edit_question_answer_path(question, answer), class: 'btn btn-info btn-sm' %>
-        <%= link_to 'Delete', question_answer_path(question, answer), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'btn btn-danger btn-sm' %></div>
+        <%= link_to t('buttons.edit'), edit_question_answer_path(question, answer), class: 'btn btn-secondary btn-sm' %>
+        <%= link_to t('buttons.delete'), question_answer_path(question, answer), data: {turbo_method: :delete, turbo_confirm: t('buttons.confirm')}, class: 'btn btn-danger btn-sm' %>
+      </div>
       </div>
       <div class="card-footer text-body-secondary">
         <small>
-          Created <%= time_ago_in_words(answer.created_at) %> ago,
-          edited <%= time_ago_in_words(answer.updated_at) %> ago
+          <%= t('timestamp.created') %> <%= time_ago_in_words(answer.created_at) %> <%= t('timestamp.ago') %>,
+          <%= t('timestamp.edited') %> <%= time_ago_in_words(answer.updated_at) %> <%= t('timestamp.ago') %>
         </small>
       </div>
   </article>
