--- a/app/views/layouts/shared/_menu.html.erb
+++ b/app/views/layouts/shared/_menu.html.erb
@@ -7,9 +7,32 @@
             <%= nav_tab( t('menu.home'), root_path, {class: 'nav-link px-2', current_page: current_page} )%>
           </li>
           <li>
-            <%= nav_tab( 'Questions', questions_path, {class: 'nav-link px-2', current_page: current_page} )%>
+            <%= nav_tab( t('menu.questions'), questions_path, {class: 'nav-link px-2', current_page: current_page} )%>
           </li>
         </ul>
+
+        <ul class="nav col-12 col-lg-auto mb-2 mb-md-0">
+          <li class="dropdown">
+            <%= link_to '#', class: 'nav-link px-2 dropdown-toggle text-white',
+              data: {"bs-toggle": 'dropdown'} do %>
+              <%= t I18n.locale %>
+            <% end %>
+            
+            <ul class="dropdown-menu">
+              <% I18n.available_locales.each do |locale| %>
+                <li>
+                  <% if I18n.locale == locale %>
+                    <%= tag.span t(locale), class: 'dropdown-item' %>
+                  <% else %>
+                    <%= link_to t(locale), root_path(locale: locale),
+                      class: 'dropdown-item' %>
+                  <% end %>
+                </li>
+              <% end %>
+            </ul>
+          </li>
+        </ul>
+
         <ul class="nav col-12 col-lg-auto mb-2 mb-md-0">
           <% if user_signed_in? %>
             <li class="dropdown">
