--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -21,5 +21,5 @@
     </div>
   </div>
 
-  <%= f.submit "Submit question!", class: 'btn btn-primary' %>
+  <%= f.submit t('buttons.submitQuestion'), class: 'btn btn-primary' %>
 <% end %>
