--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,9 +1,9 @@
-<% provide :page_title, 'Questions' %>
-<% currently_at 'Questions' %>
+<% provide :page_title, t('menu.questions') %>
+<% currently_at t('menu.questions') %>
 
-<h1 class="mb-4">Questions</h1>
+<h1 class="mb-4"><%= t('menu.questions') %></h1>
 
-<%= link_to 'New question', new_question_path, class: 'btn btn-primary btn-lg mb-3' %>
+<%= link_to t('buttons.newQuestion'), new_question_path, class: 'btn btn-primary btn-lg mb-3' %>
 
 
 <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
@@ -18,14 +18,14 @@
         </div>
       </section>
 
-      <%= link_to 'Show', question_path(question), class: 'btn btn-primary' %> 
-      <%= link_to 'Edit', edit_question_path(question), class: 'btn btn-secondary' %>
-      <%= link_to 'Destroy', question_path(question), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'btn btn-danger' %>
+      <%= link_to t('buttons.show'), question_path(question), class: 'btn btn-primary' %> 
+      <%= link_to t('buttons.edit'), edit_question_path(question), class: 'btn btn-secondary' %>
+      <%= link_to t('buttons.delete'), question_path(question), data: {turbo_method: :delete, turbo_confirm: t('buttons.confirm')}, class: 'btn btn-danger' %>
     </div>
     <div class="card-footer text-body-secondary">
         <small>
-          Created <%= time_ago_in_words(question.created_at) %> ago,
-          edited <%= time_ago_in_words(question.updated_at) %> ago
+          <%= t('timestamp.created') %> <%= time_ago_in_words(question.created_at) %> <%= t('timestamp.ago') %>,
+          <%= t('timestamp.edited') %> <%= time_ago_in_words(question.updated_at) %> <%= t('timestamp.ago') %>
         </small>
       </div>
   </article>
