--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,6 +1,6 @@
-<% currently_at 'Questions' %>
-<% provide :page_title, 'New question' %>
+<% currently_at t('menu.questions') %>
+<% provide :page_title, t('.title') %>
 
-<h1 class="mb-4">New question</h1>
+<h1 class="mb-4"><%= t('.title') %></h1>
 
 <%= render 'form' %>
