--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,21 +1,21 @@
-<% currently_at 'Questions' %>
+<% currently_at t('menu.questions') %>
 <% provide :page_title, 'Question' %>
 
 <h1 class="mb-4"><%= @question.title %></h1>
 
 <p class="mb-0 text-secondary">
-  created at: <%= l @question.created_at, format: :long %>
+  <%= t('timestamp.created') %>: <%= l @question.created_at, format: :long %>
 </p>
 <p class="mb-0 text-secondary">
-  edited at: <%= l @question.updated_at, format: :long %>
+  <%= t('timestamp.edited') %>: <%= l @question.updated_at, format: :long %>
 </p>
 
 <div class="lead my-3 mb-4">
   <%= sanitize @question.body %>
 </div>
 
-<%= link_to 'Edit', edit_question_path(@question), class: 'btn btn-info' %>
-<%= link_to 'Destroy', question_path(@question), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'btn btn-danger' %>
+<%= link_to t('buttons.edit'), edit_question_path(@question), class: 'btn btn-secondary' %>
+<%= link_to t('buttons.delete'), question_path(@question), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'btn btn-danger' %>
 
 <hr class="my-4" />
 <h2 class="mb-3">Write your answer</h2>
