--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -8,30 +8,6 @@
 
 <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
 
-<% @questions.each do |question| %>
-  <article class="card my-3">
-    <section class="card-header">
-      <%= question.user.name %>
-    </section>
-    <div class="card-body">
-    <h4><%= link_to question.title, question_path(question) %></h4>
-      <section class="card-text mb-4">
-        <div class="my-2">
-          <%= truncate strip_tags(question.body), length: 140, omission: '... (continued)' %>
-        </div>
-      </section>
-
-      <%= link_to t('buttons.show'), question_path(question), class: 'btn btn-primary' %> 
-      <%= link_to t('buttons.edit'), edit_question_path(question), class: 'btn btn-secondary' %>
-      <%= link_to t('buttons.delete'), question_path(question), data: {turbo_method: :delete, turbo_confirm: t('buttons.confirm')}, class: 'btn btn-danger' %>
-    </div>
-    <div class="card-footer text-body-secondary">
-        <small>
-          <%= t('timestamp.created') %> <%= time_ago_in_words(question.created_at) %> <%= t('timestamp.ago') %>,
-          <%= t('timestamp.edited') %> <%= time_ago_in_words(question.updated_at) %> <%= t('timestamp.ago') %>
-        </small>
-      </div>
-  </article>
-<% end %>
+<%= render @questions %>
 
 <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
