feat: implement gravatar; upd styles

--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -1,17 +1,21 @@
 <article class="mb-3 card" id="answer-<%= answer.id %>">
-    <div class="card-body">
-      <div class="card-text mb-4">
-        <%= sanitize answer.body %>
-      </div>
-      <div class="">
-        <%= link_to t('buttons.edit'), edit_question_answer_path(question, answer), class: 'btn btn-secondary btn-sm' %>
-        <%= link_to t('buttons.delete'), question_answer_path(question, answer), data: {turbo_method: :delete, turbo_confirm: t('buttons.confirm')}, class: 'btn btn-danger btn-sm' %>
-      </div>
-      </div>
-      <div class="card-footer text-body-secondary">
-        <small>
-          <%= t('timestamp.created') %> <%= time_ago_in_words(answer.created_at) %> <%= t('timestamp.ago') %>,
-          <%= t('timestamp.edited') %> <%= time_ago_in_words(answer.updated_at) %> <%= t('timestamp.ago') %>
-        </small>
-      </div>
+  <section class="card-header">
+    <%= gravatar(answer.user, 30, "me-2") %>
+    <%= answer.user.name %>
+  </section>
+  <div class="card-body">
+    <div class="card-text mb-4">
+      <%= sanitize answer.body %>
+    </div>
+    <div class="btn-group">
+      <%= link_to t('buttons.edit'), edit_question_answer_path(question, answer), class: 'btn btn-secondary btn-sm' %>
+      <%= link_to t('buttons.delete'), question_answer_path(question, answer), data: {turbo_method: :delete, turbo_confirm: t('buttons.confirm')}, class: 'btn btn-danger btn-sm' %>
+    </div>
+    </div>
+    <div class="card-footer text-body-secondary">
+      <small>
+        <%= t('timestamp.created') %> <%= time_ago_in_words(answer.created_at) %> <%= t('timestamp.ago') %>,
+        <%= t('timestamp.edited') %> <%= time_ago_in_words(answer.updated_at) %> <%= t('timestamp.ago') %>
+      </small>
+    </div>
   </article>
