--- a/app/views/layouts/shared/_menu.html.erb
+++ b/app/views/layouts/shared/_menu.html.erb
@@ -36,27 +36,30 @@
         <ul class="nav col-12 col-lg-auto mb-2 mb-md-0">
           <% if user_signed_in? %>
             <li class="dropdown">
-              <%= nav_tab current_user.name, '#',
-                class: 'nav-link px-2 dropdown-toggle',
-                data: {"bs-toggle": 'dropdown'}, current_page: current_page %>
+              <%= link_to '#',
+                class: 'nav-link px-2 dropdown-toggle text-white',
+                data: {"bs-toggle": 'dropdown'} do %>
+                <%= gravatar current_user %>
+                <%= current_user.name %>
+              <% end %>
               
               <ul class="dropdown-menu">
                 <li>
-                  <%= link_to 'Edit profile', edit_user_path(current_user), class: 'dropdown-item' %>
+                  <%= link_to t('menu.editProfile'), edit_user_path(current_user), class: 'dropdown-item' %>
                 </li>
                 <li>
                   <hr class="dropdown-divider" />
                 </li>
                 <li>
-                  <%= link_to 'Log Out', session_path, data: {turbo_method: :delete}, class: 'dropdown-item' %>
+                  <%= link_to t('menu.logout'), session_path, data: {turbo_method: :delete}, class: 'dropdown-item' %>
                 </li>
               </ul>
             </li>
           <% else %>
-            <li><%= nav_tab 'Sign Up', new_user_path,
+            <li><%= nav_tab t('menu.signUp'), new_user_path,
               class: 'nav-link px-2', current_page: current_page %></li>
 
-            <li><%= nav_tab 'Log In', new_session_path,
+            <li><%= nav_tab t('menu.login'), new_session_path,
               class: 'nav-link px-2', current_page: current_page %></li>
           <% end %>
         </ul>
