--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,5 +1,6 @@
 <article class="card my-3">
     <section class="card-header">
+      <%= gravatar(question.user, 30, "me-2") %>
       <%= question.user.name %>
     </section>
     <div class="card-body">
