--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -21,14 +21,19 @@
   <%= sanitize @question.body %>
 </div>
 
-<div class="btn-group">
-  <%= link_to t('buttons.edit'), edit_question_path(@question), class: 'btn btn-secondary' %>
-  <%= link_to t('buttons.delete'), question_path(@question), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'btn btn-danger' %>
+<%= render 'comments/commentable', commentable: @question, comment: @comment,
+  html_id: 'questionComments'  %>
+
+<div class=" pt-3 mt-3">
+  <div class="btn-group">
+    <%= link_to t('buttons.edit'), edit_question_path(@question), class: 'btn btn-secondary' %>
+    <%= link_to t('buttons.delete'), question_path(@question),
+      data: {turbo_method: :delete, turbo_confirm: t('buttons.confirm')}, class: 'btn btn-danger' %>
+  </div>
 </div>
 
-
 <div class="py-3 my-3 border-top border-bottom">
-  <h2 class="mb-3">Write your answer</h2>
+  <h2 class="mb-3"><%= t('.answerTitle') %></h2>
   
   <%= render "answers/form" %>
   
