--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -21,5 +21,15 @@
     </div>
   </div>
 
+  <div class="mb-3 row">
+    <div class="col-sm-2 col-form-label">
+      <%= f.label :tags %>
+    </div>
+
+    <div class="col-sm-10">
+      <%= f.collection_select(:tag_ids, tags, :id, :title, {}, { multiple: true, size: 3, class: "form-select" }) %>
+    </div>
+  </div>
+
   <%= f.submit t('buttons.submitQuestion'), class: 'btn btn-primary' %>
 <% end %>
