--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -3,18 +3,24 @@
       <%= gravatar(question.user, 30, "me-2") %>
       <%= question.user.name %>
     </section>
+
     <div class="card-body">
     <h4><%= link_to question.title, question_path(question) %></h4>
-      <section class="card-text mb-4">
+      <section class="card-text mb-3">
         <div class="my-2">
           <%= truncate strip_tags(question.body), length: 140, omission: '... (continued)' %>
         </div>
       </section>
 
+      <div class="mb-3">
+        <%= render question.tags %>
+      </div>
+
       <%= link_to t('buttons.show'), question_path(question), class: 'btn btn-primary' %> 
       <%= link_to t('buttons.edit'), edit_question_path(question), class: 'btn btn-secondary' %>
       <%= link_to t('buttons.delete'), question_path(question), data: {turbo_method: :delete, turbo_confirm: t('buttons.confirm')}, class: 'btn btn-danger' %>
     </div>
+
     <div class="card-footer text-body-secondary">
       <small>
         <%= t('timestamp.created') %> <%= time_ago_in_words(question.created_at) %> <%= t('timestamp.ago') %>,
