--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,6 +1,6 @@
-<%= render 'layouts/shared/errors', object: @user %>
+<%= render 'layouts/shared/errors', object: user %>
 
-<%= form_with model: @user do |f| %>
+<%= form_with model: [:admin, user] do |f| %>
   <div class="mb-3 row">
     <div class="col-sm-2 col-form-label">
       <%= f.label :email %>
@@ -27,8 +27,7 @@
     </div>
 
     <div class="col-sm-10">
-      <%= f.text_field :role, value: t(@user.role, scope: 'admin.users.roles'),
-        class: 'form-control-plaintext form-control-lg',readonly: true %>
+      <%= f.select :role, user_roles, {}, class: 'form-select form-select-lg' %>
     </div>
   </div>
 
@@ -52,5 +51,5 @@
     </div>
   </div>
 
-  <%= f.submit (@user.new_record? ? t('buttons.register') : t('buttons.save')), class: 'btn btn-primary btn-lg' %>
+  <%= f.submit (user.new_record? ? t('buttons.register') : t('buttons.save')), class: 'btn btn-primary btn-lg' %>
 <% end %>
