--- a/app/views/admin/users/_user.html.erb
+++ b/app/views/admin/users/_user.html.erb
@@ -1,8 +1,14 @@
-
 <tr>
   <th scope="row"><%= user.id %></th>
   <td><%= user.name %></td>
   <td><%= user.email %></td>
+  <td><%= user.role %></td>
   <td><%= user.created_at %></td>
-  <td><%= user.updated_at %></td>
+  <td>
+    <div class="btn-group">
+      <%= link_to t('buttons.edit'), edit_admin_user_path(user), class: 'btn btn-secondary' %>
+      <%= link_to t('buttons.delete'), admin_user_path(user),
+        data: {turbo_method: :delete, turbo_confirm: t('buttons.confirm')}, class: 'btn btn-danger' %>
+    </div>
+  </td>
 </tr>
