--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,6 +1,7 @@
+
 <% provide :page_title, t('.title') %>
-<% currently_at 'Sign up' %>
+<% currently_at t('menu.users') %>
 
 <h1 class="mb-4"><%= t('.title') %></h1>
 
-<%= render 'form' %>
+<%= render 'form', user: @user %>
