--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -9,10 +9,11 @@
   <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">Name</th>
-      <th scope="col">Email</th>
-      <th scope="col">Created at</th>
-      <th scope="col">Updated at</th>
+      <th scope="col"><%= t('.name') %></th>
+      <th scope="col"><%= t('.email') %></th>
+      <th scope="col"><%= t('.role') %></th>
+      <th scope="col"><%= t('.created') %></th>
+      <th scope="col"></th>
     </tr>
   </thead>
   <tbody>
