--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -17,8 +17,14 @@
       </div>
 
       <%= link_to t('buttons.show'), question_path(question), class: 'btn btn-primary' %> 
-      <%= link_to t('buttons.edit'), edit_question_path(question), class: 'btn btn-secondary' %>
-      <%= link_to t('buttons.delete'), question_path(question), data: {turbo_method: :delete, turbo_confirm: t('buttons.confirm')}, class: 'btn btn-danger' %>
+
+      <% if policy(question).edit? %>
+        <%= link_to t('buttons.edit'), edit_question_path(question), class: 'btn btn-secondary' %>
+      <% end %>
+
+      <% if policy(question).destroy? %>
+        <%= link_to t('buttons.delete'), question_path(question), data: {turbo_method: :delete, turbo_confirm: t('buttons.confirm')}, class: 'btn btn-danger' %>
+      <% end %>
     </div>
 
     <div class="card-footer text-body-secondary">
