--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -3,8 +3,9 @@
 
 <h1 class="mb-4"><%= t('menu.questions') %></h1>
 
-<%= link_to t('buttons.newQuestion'), new_question_path, class: 'btn btn-primary btn-lg mb-3' %>
-
+<% if policy(:question).new? %>
+  <%= link_to t('buttons.newQuestion'), new_question_path, class: 'btn btn-primary btn-lg mb-3' %>
+<% end %>
 
 <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
 
