--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -26,9 +26,14 @@
 
 <div class=" pt-3 mt-3">
   <div class="btn-group">
-    <%= link_to t('buttons.edit'), edit_question_path(@question), class: 'btn btn-secondary' %>
-    <%= link_to t('buttons.delete'), question_path(@question),
-      data: {turbo_method: :delete, turbo_confirm: t('buttons.confirm')}, class: 'btn btn-danger' %>
+    <% if policy(@question).edit? %>
+      <%= link_to t('buttons.edit'), edit_question_path(@question), class: 'btn btn-secondary' %>
+    <% end %>
+
+    <% if policy(@question).destroy? %>
+      <%= link_to t('buttons.delete'), question_path(@question),
+        data: {turbo_method: :delete, turbo_confirm: t('buttons.confirm')}, class: 'btn btn-danger' %>
+    <% end %>
   </div>
 </div>
 
