--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -44,7 +44,7 @@
   
 </div>
 
-<h2 class="mb-3"><%= t('.answers') %></h2>
+<h2 class=""><%= t('.answers') %></h2>
 
 <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
 
