--- a/app/views/layouts/shared/_menu.html.erb
+++ b/app/views/layouts/shared/_menu.html.erb
@@ -9,6 +9,10 @@
           <li>
             <%= nav_tab( t('menu.questions'), questions_path, {class: 'nav-link px-2', current_page: current_page} )%>
           </li>
+          <% if user_signed_in? && policy([:admin, :user]).index? %>
+            <li><%= nav_tab t('menu.users'), admin_users_path,
+              class: 'nav-link px-2', current_page: current_page %></li>
+          <% end %>
         </ul>
 
         <ul class="nav col-12 col-lg-auto mb-2 mb-md-0">
