--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -32,4 +32,5 @@
   </div>
 
   <%= f.submit t('buttons.submitQuestion'), class: 'btn btn-primary' %>
+  <%= link_to 'back', (@question.new_record? ? questions_path :  question_path(@question)), class: 'btn btn-small btn-secondary' %>
 <% end %>
