--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -4,11 +4,18 @@
 <h1 class="mb-4"><%= t('menu.questions') %></h1>
 
 <% if policy(:question).new? %>
-  <%= link_to t('buttons.newQuestion'), new_question_path, class: 'btn btn-primary btn-lg mb-3' %>
+  <%= link_to t('buttons.newQuestion'), new_question_path,
+        class: 'btn btn-primary btn-lg mb-3',
+        data: { turbo_frame: dom_id(Question.new) } %>
+
+  <div class="my-3">
+    <%= turbo_frame_tag Question.new %>
+  </div>
 <% end %>
 
 <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
 
-<%= render @questions %>
-
+<%= turbo_frame_tag "questions" do %>
+  <%= render @questions %>
+<% end %>
 <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
