--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,44 +1,47 @@
-<article class="card my-3">
-    <section class="card-header">
-      <%= gravatar(question.user, 30, "me-2") %>
-      <%= question.user.name %>
-    </section>
-
-    <div class="card-body">
-    <h4><%= link_to question.title, question_path(question) %></h4>
-      <section class="card-text mb-3">
-        <div class="my-2">
-          <%= truncate strip_tags(question.body), length: 140, omission: '... (continued)' %>
-        </div>
+<%= turbo_frame_tag question do %>
+  <article class="card my-3">
+      <section class="card-header">
+        <%= gravatar(question.user, 30, "me-2") %>
+        <%= question.user.name %>
       </section>
 
-      <div class="mb-3">
-        <%= render question.tags %>
+      <%# data: { turbo_frame: "_top" } allows to open a new page, not inside the frame  %>
+  
+      <div class="card-body">
+      <h4><%= link_to question.title, question_path(question), data: { turbo_frame: "_top" } %></h4>
+        <section class="card-text mb-3">
+          <div class="my-2">
+            <%# <%= truncate strip_tags(question.body), length: 140, omission: '... (continued)' %> 
+            <%= sanitize question.body %>
+          </div>
+        </section>
+  
+        <div class="mb-3">
+          <%= render question.tags %>
+        </div>
+  
+        <% if policy(question).edit? %>
+          <%= link_to t('buttons.edit'), edit_question_path(question), class: 'btn btn-secondary' %>
+        <% end %>
+  
+        <% if policy(question).destroy? %>
+          <%= link_to t('buttons.delete'), question_path(question), data: {turbo_method: :delete, turbo_confirm: t('buttons.confirm')}, class: 'btn btn-danger' %>
+        <% end %>
       </div>
-
-      <%= link_to t('buttons.show'), question_path(question), class: 'btn btn-primary' %> 
-
-      <% if policy(question).edit? %>
-        <%= link_to t('buttons.edit'), edit_question_path(question), class: 'btn btn-secondary' %>
-      <% end %>
-
-      <% if policy(question).destroy? %>
-        <%= link_to t('buttons.delete'), question_path(question), data: {turbo_method: :delete, turbo_confirm: t('buttons.confirm')}, class: 'btn btn-danger' %>
-      <% end %>
-    </div>
-
-    <div class="card-footer text-body-secondary d-flex justify-content-between">
-      <div>
-        <small class="me-3">
-          <%= pluralize( question.views, 'view' ) %>
-        </small>
+  
+      <div class="card-footer text-body-secondary d-flex justify-content-between">
+        <div>
+          <small class="me-3">
+            <%= pluralize( question.views, 'view' ) %>
+          </small>
+          <small>
+            <%= pluralize( question.answers.count, 'answer' ) %>
+          </small>
+        </div>
         <small>
-          <%= pluralize( question.answers.count, 'answer' ) %>
+          <%= t('timestamp.created') %> <%= time_ago_in_words(question.created_at) %> <%= t('timestamp.ago') %>,
+          <%= t('timestamp.edited') %> <%= time_ago_in_words(question.updated_at) %> <%= t('timestamp.ago') %>
         </small>
       </div>
-      <small>
-        <%= t('timestamp.created') %> <%= time_ago_in_words(question.created_at) %> <%= t('timestamp.ago') %>,
-        <%= t('timestamp.edited') %> <%= time_ago_in_words(question.updated_at) %> <%= t('timestamp.ago') %>
-      </small>
-    </div>
-</article>
+  </article>
+<% end %>
