--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -33,6 +33,6 @@
     </div>
 
     <%= f.submit t('buttons.submitQuestion'), class: 'btn btn-primary' %>
-    <%= link_to 'back', (@question.new_record? ? questions_path :  question_path(@question)), class: 'btn btn-small btn-secondary' %>
+    <%= link_to 'back', (@question.new_record? ? questions_path :  question_path(@question)), class: 'btn btn-small btn-secondary', data: { turbo_frame: "_top" } %>
   <% end %>
 <% end %>
