feat: implement ansrers render through turbo_frame

--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -1,35 +1,37 @@
-<article class="my-3 card" id="answer-<%= answer.id %>">
-  <section class="card-header">
-    <%= gravatar(answer.user, 30, "me-2") %>
-    <%= answer.user.name %>
-  </section>
-  <div class="card-body">
-    <div class="card-text">
-      <%= sanitize answer.body %>
-    </div>
-    
-    <% if policy(answer).edit? %>
-      <div class="btn-group mt-4">
+<%= turbo_frame_tag answer do %>
+    <article class="my-3 card" id="answer-<%= answer.id %>">
+      <section class="card-header">
+        <%= gravatar(answer.user, 30, "me-2") %>
+        <%= answer.user.name %>
+      </section>
+      <div class="card-body">
+        <div class="card-text">
+          <%= sanitize answer.body %>
+        </div>
+        
         <% if policy(answer).edit? %>
-          <%= link_to t('buttons.edit'), edit_question_answer_path(question, answer), class: 'btn btn-secondary btn-sm' %>
+          <div class="btn-group mt-4">
+            <% if policy(answer).edit? %>
+              <%= link_to t('buttons.edit'), edit_question_answer_path(question, answer), class: 'btn btn-secondary btn-sm' %>
+            <% end %>
+  
+            <% if policy(answer).destroy? %>
+              <%= link_to t('buttons.delete'), question_answer_path(question, answer),
+                data: {turbo_method: :delete, turbo_confirm: t('buttons.confirm')}, class: 'btn btn-danger btn-sm' %>
+            <% end %>
+          </div>
         <% end %>
-
-        <% if policy(answer).destroy? %>
-          <%= link_to t('buttons.delete'), question_answer_path(question, answer),
-            data: {turbo_method: :delete, turbo_confirm: t('buttons.confirm')}, class: 'btn btn-danger btn-sm' %>
-        <% end %>
+        
+        
       </div>
-    <% end %>
-    
-    
-  </div>
-  <div class="card-footer text-body-secondary">
-    <small>
-      <%= t('timestamp.created') %> <%= time_ago_in_words(answer.created_at) %> <%= t('timestamp.ago') %>,
-      <%= t('timestamp.edited') %> <%= time_ago_in_words(answer.updated_at) %> <%= t('timestamp.ago') %>
-    </small>
-  </div>
-</article>
-
-<%= render 'comments/commentable', commentable: answer, comment: @comment,
-  html_id: dom_id(answer, 'comment_form') %>
+      <div class="card-footer text-body-secondary">
+        <small>
+          <%= t('timestamp.created') %> <%= time_ago_in_words(answer.created_at) %> <%= t('timestamp.ago') %>,
+          <%= t('timestamp.edited') %> <%= time_ago_in_words(answer.updated_at) %> <%= t('timestamp.ago') %>
+        </small>
+      </div>
+    </article>
+  
+    <%= render 'comments/commentable', commentable: answer, comment: @comment,
+      html_id: dom_id(answer, 'comment_form') %>
+<% end %>
