feat: implement comments render through turbo_frame

--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -32,6 +32,5 @@
       </div>
     </article>
   
-    <%= render 'comments/commentable', commentable: answer, comment: @comment,
-      html_id: dom_id(answer, 'comment_form') %>
+    <%= render 'comments/commentable', commentable: answer, comment: @comment %>
 <% end %>
