--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -44,8 +44,7 @@
   </div>
 </div>
 
-<%= render 'comments/commentable', commentable: @question, comment: @comment,
-  html_id: 'questionComments'  %>
+<%= render 'comments/commentable', commentable: @question, comment: @comment %>
 
 
 <div class="py-3 my-3 border-top border-bottom">
