--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,25 +1,27 @@
-<%= tag.article class: 'mb-3 card border-0', id: dom_id(comment) do %>
-  <div class="row g-0">
-    <div class="col-sm-auto text-sm-center align-self-center">
-      <%= gravatar comment.user, 30, 'd-block'  %>
-      <%= comment.user.name%>
-    </div>
-    <div class="col-sm">
-      <div class="card-body">
-        <section class="card-text mb-3">
-          <div class="col-sm-9">
-            <p>
-              <%= sanitize comment.body %>
-            </p>
-            <% if policy(comment).destroy? %>
-              <%= link_to t('buttons.delete'),
-                          polymorphic_path([comment.commentable, comment]),
-                          data: {turbo_method: :delete, turbo_confirm: t('buttons.confirm')},
-                          class: 'btn btn-danger btn-sm' %>
-            <% end %>
-          </div>
-        </section>
+<%= turbo_frame_tag comment do %>
+  <%= tag.article class: 'mb-3 card border-0' do %>
+    <div class="row g-0">
+      <div class="col-sm-auto text-sm-center align-self-center">
+        <%= gravatar comment.user, 30, 'd-block'  %>
+        <%= comment.user.name%>
+      </div>
+      <div class="col-sm">
+        <div class="card-body">
+          <section class="card-text mb-3">
+            <div class="col-sm-9">
+              <p>
+                <%= sanitize comment.body %>
+              </p>
+              <% if policy(comment).destroy? %>
+                <%= link_to t('buttons.delete'),
+                            polymorphic_path([comment.commentable, comment]),
+                            data: {turbo_method: :delete, turbo_confirm: t('buttons.confirm')},
+                            class: 'btn btn-danger btn-sm' %>
+              <% end %>
+            </div>
+          </section>
+        </div>
       </div>
     </div>
-  </div>
+  <% end %>
 <% end %>
