--- a/app/views/comments/_commentable.html.erb
+++ b/app/views/comments/_commentable.html.erb
@@ -1,23 +1,31 @@
+<% comment_builder = commentable.comments.build %>
+<% html_id = dom_id commentable, "comments" %>
+
 <%= link_to t('buttons.comments'), "##{html_id}",
   class: 'btn btn-primary', data: {'bs-toggle': 'collapse'} %>
 
-<%= tag.div class: "collapse", id: html_id do %>
-  <% if policy(comment || Comment).create? %>
-    <%= form_with model: [commentable, (@comment || commentable.comments.build)],
-        class: 'pt-3 border-top my-2' do |f| %>
-      <%= render 'layouts/shared/errors', object: @comment %>
+<%= turbo_frame_tag "#{dom_id(commentable)}_#{dom_id(comment_builder)}" do %>
+  <%= tag.div class: "collapse", id: html_id do %>
+    <% if policy(comment || Comment).create? %>
+      <%= form_with model: [commentable, (@comment || comment_builder)],
+          class: 'pt-3 border-top my-2' do |f| %>
+        <%= render 'layouts/shared/errors', object: @comment %>
 
-      <div class="mb-3 row">
-        <div class="col-sm-2 col-form-label">
-          <%= f.label :body %>
+        <div class="mb-3 row">
+          <div class="col-sm-2 col-form-label">
+            <%= f.label :body %>
+          </div>
+          <div class="col-sm-10">
+            <%= f.text_area :body, class: 'form-control form-control-sm' %>
+          </div>
         </div>
-        <div class="col-sm-10">
-          <%= f.text_area :body, class: 'form-control form-control-sm' %>
-        </div>
-      </div>
 
-      <%= f.submit t('buttons.submitComment'), class: 'btn btn-sm btn-primary' %>
+        <%= f.submit t('buttons.submitComment'), class: 'btn btn-sm btn-primary' %>
+      <% end %>
+    <% end %>
+
+    <%= turbo_frame_tag dom_id(commentable, "comments_list") do %>
+      <%= render commentable.comments.includes(:user) %>
     <% end %>
   <% end %>
-  <%= render commentable.comments.includes(:user) %>
 <% end %>
